Remove min-width to avoid horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body
 #banner, .section, address
 {
   max-width: 25em;
-  min-width: 25em;
   margin: 0 auto;
   text-align: justify;
   text-justify: inter-word;
